--- a/.github/workflows/upload-test-stats-while-running.yml
+++ b/.github/workflows/upload-test-stats-while-running.yml
@@ -4,6 +4,7 @@ on:
   schedule:
     # Every hour
     - cron: '0 * * * *'
+  push:
 
 concurrency:
   group: upload-test-stats-while-running
@@ -12,7 +13,7 @@ concurrency:
 jobs:
   upload_test_stats_while_running:
     name: Intermediate upload test stats
-    runs-on: ubuntu-22.04
+    runs-on: linux.2xlarge
     environment: upload-stats
     steps:
       - name: Checkout PyTorch
@@ -21,22 +22,18 @@ jobs:
           fetch-depth: 1
           submodules: false
 
-      - uses: actions/setup-python@v4
-        with:
-          python-version: '3.11'
-          cache: pip
+      - name: Setup Linux
+        uses: ./.github/actions/setup-linux
 
-      - run: |
-          pip3 install requests==2.32.2 rockset==1.0.3 boto3==1.35.42
+      - name: Setup miniconda
+        uses: pytorch/test-infra/.github/actions/setup-miniconda@main
+        with:
+          python-version: "3.10"
+
+      - name: Install requirements
+        run: |
+          ${CONDA_RUN} pip install requests==2.32.2 boto3==1.35.42
 
       - name: Upload test stats
-        env:
-          AWS_ACCESS_KEY_ID: ${{ secrets.AWS_ACCESS_KEY_ID }}
-          AWS_SECRET_ACCESS_KEY: ${{ secrets.AWS_SECRET_ACCESS_KEY }}
-          GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
-          WORKFLOW_RUN_ID: ${{ inputs.workflow_id }}
-          WORKFLOW_RUN_ATTEMPT: ${{ inputs.workflow_run_attempt }}
         run: |
-          python3 -m tools.stats.upload_test_stats_intermediate \
-            --workflow-run-id "${WORKFLOW_RUN_ID}" \
-            --workflow-run-attempt "${WORKFLOW_RUN_ATTEMPT}" \
+          ${CONDA_RUN} python -m tools.stats.upload_test_stats_running_jobs
